# trace-out

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  trace-out.cpp  trace-out.hpp
src/: CMakeLists.txt
src/trace-out/: CMakeLists.txt  autolock.hpp  base-conversions.hpp  byte-order.hpp  console.hpp  current-thread-name.hpp  date-time.hpp  filename-line.hpp  function-printer.hpp  has-member.hpp  indentation.hpp  integer.hpp  macro-magic.hpp  memory-printer.hpp  mutex.hpp  number-bits-iterator.hpp  number-bytes-iterator.hpp  number-format.hpp  out-stream.hpp  pretty-code-blocks.hpp  pretty-function.hpp  pretty-lines.hpp  pretty-memory.hpp  pretty-print.hpp  pretty-range.hpp  pretty-return.hpp  pretty-time.hpp  pretty-trace.hpp  pretty-values.hpp  pretty.hpp  printfamily.hpp  range-printer.hpp  resource.hpp  return-printer.hpp  statements-printer.hpp  statistics.hpp  stream-to-endpoint.hpp  stream-to-file.hpp  stream-to-stdout.hpp  stream-to-wdo.hpp  (+23 more)
tests/: CMakeLists.txt
tests/amalgamated-header-verification/: CMakeLists.txt  amalgamated-header-verification-c++11.tests.cpp  amalgamated-header-verification-c++17.tests.cpp  amalgamated-header-verification-c++23.tests.cpp  amalgamated-header-verification-c++98.tests.cpp  amalgamated-header-verification.tests.cpp
tests/compatibility-with-c++98/: CMakeLists.txt  compatibility-with-c++98.cpp  t-base.tests.cpp  t.tests.cpp
tests/debug/: CMakeLists.txt  main.cpp
tests/helpers/: CMakeLists.txt  dollar-store-catch2-main.cpp  dollar-store-catch2.cpp  dollar-store-catch2.hpp  dummy.cpp  dummy.hpp  fit.hpp  framework-library-component.hpp  lifecycle-tracker.cpp  std-vector-operator-less-than.hpp  test-stream.cpp  test-stream.hpp  trace-out-to-test-stream.hpp
tests/helpers-c++11/: CMakeLists.txt  lifecycle-tracker.cpp  lifecycle-tracker.hpp
tests/indentation-option/: CMakeLists.txt  indentation-option.tests.cpp
tests/macros/: CMakeLists.txt  clock-stats.tests.cpp  clocks.tests.cpp  e.tests.cpp  f.tests.cpp  for.tests.cpp  if.tests.cpp  indentation.tests.cpp  m.tests.cpp  p.tests.cpp  r.tests.cpp  return.tests.cpp  s.tests.cpp  start-no-message.tests.cpp  start-with-message-argument-1.tests.cpp  start-with-message-argument-2.tests.cpp  start-with-message-argument-and-definition.tests.cpp  start-with-message-definition-1.tests.cpp  start-with-message-definition-2.tests.cpp  t-base.tests.cpp  t-expression-nested.tests.cpp  t.tests.cpp  time-stats.tests.cpp  time.tests.cpp  unique-variable-names.tests.cpp  w.tests.cpp  while.tests.cpp
tests/macros-c++17/: CMakeLists.txt  t.tests.cpp
tests/macros-c++23/: CMakeLists.txt  t.tests.cpp
tests/marker-and-show-date-time-and-show-file-line-options-and-start-macro/: CMakeLists.txt  marker-and-show-date-time-and-show-file-line-options-and-start-macro.tests.cpp
tests/marker-and-show-thread-options/: CMakeLists.txt  marker-and-show-thread-options.tests.cpp
tests/marker-option/: CMakeLists.txt  marker-option-and-start-macro.tests.cpp  marker-option.tests.cpp
tests/off-option/: CMakeLists.txt  off-option-and-start-macro.tests.cpp  off-option.tests.cpp
tests/show-date-time-and-file-line-options/: CMakeLists.txt  show-date-time-and-file-line-options-and-start-macro.tests.cpp  show-date-time-and-file-line-options.tests.cpp
tests/show-date-time-option/: CMakeLists.txt  show-date-time-option-and-start-macro.tests.cpp  show-date-time-option.tests.cpp
tests/show-file-line-option/: CMakeLists.txt  show-file-line-option-and-start-macro.tests.cpp  show-file-line-option.tests.cpp
tests/show-header-and-show-thread-options/: CMakeLists.txt  show-header-and-show-thread-options.tests.cpp
tests/show-header-option/: CMakeLists.txt  show-header-option-with-clock-stats.tests.cpp  show-header-option-with-clocks.tests.cpp  show-header-option-with-f.tests.cpp  show-header-option-with-for.tests.cpp  show-header-option-with-if.tests.cpp  show-header-option-with-m.tests.cpp  show-header-option-with-return.tests.cpp  show-header-option-with-s.tests.cpp  show-header-option-with-t.tests.cpp  show-header-option-with-tbin.tests.cpp  show-header-option-with-thex.tests.cpp  show-header-option-with-time-stats.tests.cpp  show-header-option-with-time.tests.cpp  show-header-option-with-toct.tests.cpp  show-header-option-with-tr-begin-end-how-much.tests.cpp  show-header-option-with-tr-begin-end.tests.cpp  show-header-option-with-tr-begin-how-much.tests.cpp  show-header-option-with-while.tests.cpp
tests/show-header-target-option/: CMakeLists.txt  show-header-target-option-with-clock-stats.tests.cpp  show-header-target-option-with-clocks.tests.cpp  show-header-target-option-with-f.tests.cpp  show-header-target-option-with-for.tests.cpp  show-header-target-option-with-if.tests.cpp  show-header-target-option-with-m.tests.cpp  show-header-target-option-with-return.tests.cpp  show-header-target-option-with-s.tests.cpp  show-header-target-option-with-t.tests.cpp  show-header-target-option-with-tbin.tests.cpp  show-header-target-option-with-thex.tests.cpp  show-header-target-option-with-time-stats.tests.cpp  show-header-target-option-with-time.tests.cpp  show-header-target-option-with-toct.tests.cpp  show-header-target-option-with-tr-begin-end-how-much.tests.cpp  show-header-target-option-with-tr-begin-end.tests.cpp  show-header-target-option-with-tr-begin-how-much.tests.cpp  show-header-target-option-with-while.tests.cpp
tests/show-thread-option/: CMakeLists.txt  show-thread-option-and-start-macro.tests.cpp  show-thread-option.tests.cpp
tests/src/: CMakeLists.txt  e.tests.cpp  f.tests.cpp  for.tests.cpp  if.tests.cpp  indentation.tests.cpp  m.tests.cpp  p.tests.cpp  r.tests.cpp  return.tests.cpp  t.tests.cpp  w.tests.cpp  while.tests.cpp
tests/stream-to-endpoint-option/: CMakeLists.txt  stream-to-endpoint-option.tests.cpp
tests/stream-to-file-option/: CMakeLists.txt  stream-to-file-option.tests.cpp
tests/stream-to-wdo-option/: CMakeLists.txt  stream-to-wdo-option.tests.cpp
tests/strip-scope-option/: CMakeLists.txt  (+1 more)
tests/strip-scope-option-0/: CMakeLists.txt  strip-scope-option-0.tests.cpp
(+168 files in other folders)
