find_package(Catch2 3 REQUIRED)
include(Catch)

include(compiler-agnostic)
include(build-optimizations)

add_compile_options_if_supported("-Wall" "-Wextra" "/W4")

add_subdirectory(amalgamated-header-verification)
add_subdirectory(compatibility-with-c++98)
add_subdirectory(helpers)
add_subdirectory(helpers-c++11)
add_subdirectory(indentation-option)
add_subdirectory(macros)
add_subdirectory(macros-c++17)
add_subdirectory(macros-c++23)
add_subdirectory(marker-option)
add_subdirectory(off-option)
add_subdirectory(show-file-line-option)
add_subdirectory(show-thread-option)
add_subdirectory(stream-to-endpoint-option)
add_subdirectory(stream-to-file-option)
add_subdirectory(stream-to-wdo-option)
add_subdirectory(strip-scope-option-0)
add_subdirectory(strip-scope-option-1)
add_subdirectory(strip-scope-option-2)
add_subdirectory(sync-stream-option)

