include(Catch)
include(compile-options-if-supported)
include(compile-definitions-for-generator)
include(build-optimizations)

add_compile_definitions_for_generator("Visual Studio" NOMINMAX)
add_compile_options_if_supported("-Wall" "-Wextra" "/W4" "/Zc:__cplusplus")

add_subdirectory(compatibility-with-c++98)
add_subdirectory(debug)
add_subdirectory(helpers)
add_subdirectory(indentation-option)
add_subdirectory(macros)
add_subdirectory(marker-and-show-date-time-and-show-file-line-options-and-start-macro)
add_subdirectory(marker-option)
add_subdirectory(off-option)
add_subdirectory(show-date-time-and-file-line-options)
add_subdirectory(show-date-time-option)
add_subdirectory(show-file-line-option)
add_subdirectory(show-thread-option)
add_subdirectory(stream-to-endpoint-option)
add_subdirectory(stream-to-file-option)
add_subdirectory(stream-to-wdo-option)
add_subdirectory(strip-scope-option)
add_subdirectory(style-option)
add_subdirectory(sync-stream-option)

